# ChezWizper

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  README_API.md  TESTING.md  TEXT_INJECTION_SETUP.md  build.sh  check_status.sh  chezwizper-status.sh  chezwizper-toggle.sh  chezwizper-update  chezwizper.service  cleanup_chezwizper.sh  create_test_audio.sh  debug_audio.sh  debug_audio_feedback.sh  debug_transcription.patch  example_config.toml  example_config_api.toml  example_config_audio.toml  example_config_cli.toml  example_config_openai.toml  fix_audio_simple.patch  install-arch.sh  last_transcription.sh  quick_audio_test.sh  restart_chezwizper.sh  setup_kde_shortcut.sh  test_audio_feedback.sh  test_manual_sounds.sh  test_recording.sh  test_sounds_directly.sh  test_with_audio.sh  toggle_test.sh  update-chezwizper.sh  whispy-keybind.sh
.githooks/: pre-commit
.github/workflows/: rust.yml
docs/: adding-providers.md  audio-configuration.md  configuration.md  index.md  installation.md  text-injection-setup.md  waybar-integration.md  whisper-transcription-setup.md
docs/examples/: waybar-config.jsonc  waybar-style.css
integrations/waybar/: PR_DESCRIPTION.md  README.md  install.sh
scripts/: chezwizper-update  install-arch.sh  install.sh  uninstall.sh  update-chezwizper.sh
src/: lib.rs  main.rs  text_injection.rs
src/api/: mod.rs
src/audio/: mod.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/normalizer/: mod.rs
src/text_injection/: mod.rs
src/transcription/: mod.rs
src/ui/: mod.rs
src/whisper/: api_client.rs  groq_client.rs  mod.rs  (+1 more)
(+10 files in other folders)
